[gd_scene load_steps=15 format=3 uid="uid://mj6yrljni2ap"]

[ext_resource type="Texture2D" uid="uid://cttrvuco1ll4e" path="res://Assets/pixil-frame-3.png" id="1_7qm83"]
[ext_resource type="Script" path="res://Cenas/level_2.gd" id="1_c0747"]
[ext_resource type="PackedScene" uid="uid://b7lyloobwy3eu" path="res://Cenas/poison.tscn" id="1_wvcvx"]
[ext_resource type="Texture2D" uid="uid://cc6gnuupk07qh" path="res://Assets/pixil-frame-5.png" id="2_mu6tq"]
[ext_resource type="PackedScene" uid="uid://chwdvm8ujw2d5" path="res://Cenas/player_1_level.tscn" id="3_h4tl7"]
[ext_resource type="PackedScene" uid="uid://p5r21itle76k" path="res://Cenas/door_right.tscn" id="5_7mpmw"]
[ext_resource type="PackedScene" uid="uid://bqg7rdly1rdq4" path="res://Cenas/door_left.tscn" id="6_v6vkl"]
[ext_resource type="PackedScene" uid="uid://dswnvcoflll8f" path="res://Cenas/button.tscn" id="7_dxyqv"]
[ext_resource type="PackedScene" uid="uid://bfsg6kssa0egr" path="res://Cenas/door.tscn" id="8_plo3l"]
[ext_resource type="PackedScene" uid="uid://80k1a22assub" path="res://Cenas/back_pack.tscn" id="9_xqdt5"]
[ext_resource type="PackedScene" uid="uid://y3dmd6d3wdwb" path="res://Cenas/player_2_level.tscn" id="10_5l4u2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kbf32"]
texture = ExtResource("1_7qm83")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kr8eb"]
texture = ExtResource("2_mu6tq")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_gof2p"]
physics_layer_0/collision_layer = 2
sources/0 = SubResource("TileSetAtlasSource_kbf32")
sources/1 = SubResource("TileSetAtlasSource_kr8eb")

[node name="level_2" type="Node"]
script = ExtResource("1_c0747")

[node name="Poison1" parent="." instance=ExtResource("1_wvcvx")]
position = Vector2(-248, -64)

[node name="Poison4" parent="." instance=ExtResource("1_wvcvx")]
position = Vector2(-40, -64)

[node name="Poison2" parent="." instance=ExtResource("1_wvcvx")]
position = Vector2(-224, 176)

[node name="Poison3" parent="." instance=ExtResource("1_wvcvx")]
position = Vector2(8, 176)

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(0.260771, 20.5714)
zoom = Vector2(2, 2)

[node name="Player 1 - Level" parent="." instance=ExtResource("3_h4tl7")]
position = Vector2(-288, -104)
scale = Vector2(1.12367, 1.02078)

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_gof2p")
format = 2
layer_0/tile_data = PackedInt32Array(-262164, 1, 0, -327700, 1, 0, -393236, 1, 0, -458772, 1, 0, -524308, 1, 0, -589844, 1, 0, -655380, 1, 0, -655379, 1, 0, -655378, 1, 0, -655377, 1, 0, -655376, 1, 0, -655375, 1, 0, -655374, 1, 0, -655373, 1, 0, -655372, 1, 0, -655371, 1, 0, -655370, 1, 0, -655369, 1, 0, -655368, 1, 0, -655367, 1, 0, -655366, 1, 0, -655365, 1, 0, -655364, 1, 0, -655363, 1, 0, -655362, 1, 0, -655361, 1, 0, -720896, 1, 0, -720895, 1, 0, -720894, 1, 0, -720893, 1, 0, -720892, 1, 0, -720891, 1, 0, -720890, 1, 0, -720889, 1, 0, -720888, 1, 0, -720887, 1, 0, -720886, 1, 0, -720885, 1, 0, -720884, 1, 0, -720883, 1, 0, -720882, 1, 0, -720881, 1, 0, -720880, 1, 0, -720879, 1, 0, -720878, 1, 0, -720877, 1, 0, -655341, 1, 0, -589805, 1, 0, -524269, 1, 0, -458733, 1, 0, -393197, 1, 0, -262163, 0, 0, -262162, 0, 0, -262161, 0, 0, -262160, 0, 0, -262159, 0, 0, -262158, 0, 0, -262154, 0, 0, -262153, 0, 0, -262152, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 0, 0, -327666, 0, 0, -327665, 0, 0, -196628, 1, 0, -131092, 1, 0, -65556, 1, 0, -20, 1, 0, 65516, 1, 0, 131052, 1, 0, 196588, 1, 0, 262124, 1, 0, 327660, 1, 0, 458732, 1, 0, 524268, 1, 0, 589804, 1, 0, 655340, 1, 0, 720876, 1, 0, 786412, 1, 0, 720877, 0, 0, 720878, 0, 0, 720879, 0, 0, 720880, 0, 0, 720881, 0, 0, 720887, 0, 0, 720888, 0, 0, 720894, 0, 0, 786413, 1, 0, 786414, 1, 0, 786415, 1, 0, 786416, 1, 0, 786417, 1, 0, 786418, 1, 0, 786419, 1, 0, 786420, 1, 0, 786421, 1, 0, 786422, 1, 0, 786423, 1, 0, 786424, 1, 0, 786425, 1, 0, 786426, 1, 0, 786427, 1, 0, 786428, 1, 0, 786429, 1, 0, 786430, 1, 0, 786431, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, -327661, 1, 0, -262125, 1, 0, -196589, 1, 0, -131053, 1, 0, -65517, 1, 0, 19, 1, 0, 65555, 1, 0, 131091, 1, 0, 196627, 1, 0, 262163, 1, 0, 327699, 1, 0, 393235, 1, 0, 458771, 1, 0, 524307, 1, 0, 589843, 1, 0, 655379, 1, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, -196627, 1, 0, -196626, 1, 0, -196625, 1, 0, -196624, 1, 0, -196623, 1, 0, -196622, 1, 0, -196621, 1, 0, -196620, 1, 0, -196619, 1, 0, -196618, 1, 0, -196617, 1, 0, -196616, 1, 0, -196615, 1, 0, -196614, 1, 0, -196613, 1, 0, -196612, 1, 0, -196611, 1, 0, -196610, 1, 0, -196609, 1, 0, -262144, 1, 0, -262143, 1, 0, -262142, 1, 0, -262141, 1, 0, -262140, 1, 0, -262139, 1, 0, -262138, 1, 0, -262137, 1, 0, -262136, 1, 0, -262135, 1, 0, -262134, 1, 0, -262133, 1, 0, -262132, 1, 0, -262131, 1, 0, -262130, 1, 0, -262129, 1, 0, -196593, 1, 0, -196594, 1, 0, -196595, 1, 0, -196596, 1, 0, -196597, 1, 0, -196598, 1, 0, -196599, 1, 0, -196600, 1, 0, -196601, 1, 0, -196602, 1, 0, -196603, 1, 0, -196604, 1, 0, -196605, 1, 0, -131091, 1, 0, -131090, 1, 0, -131089, 1, 0, -131088, 1, 0, -131087, 1, 0, -131086, 1, 0, -131079, 1, 0, -131078, 1, 0, -131077, 1, 0, -131076, 1, 0, -131075, 1, 0, -131074, 1, 0, -131073, 1, 0, -196608, 1, 0, -196607, 1, 0, -196606, 1, 0, -131080, 1, 0, -131081, 1, 0, -131082, 1, 0, -131083, 1, 0, -131084, 1, 0, -131085, 1, 0, -655350, 1, 0, -589814, 1, 0, -524278, 1, 0, 262125, 0, 0, 262126, 0, 0, 262127, 0, 0, 262128, 0, 0, 262129, 0, 0, 262130, 0, 0, 262131, 0, 0, 262132, 0, 0, 262133, 0, 0, 262134, 0, 0, 262135, 0, 0, 262136, 0, 0, 262137, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 327661, 1, 0, 327662, 1, 0, 327663, 1, 0, 327664, 1, 0, 327665, 1, 0, 327666, 1, 0, 327667, 1, 0, 327668, 1, 0, 327669, 1, 0, 327670, 1, 0, 327671, 1, 0, 327672, 1, 0, 327673, 1, 0, 327674, 1, 0, 327675, 1, 0, 327676, 1, 0, 327677, 1, 0, 327678, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, -65549, 1, 0, -13, 1, 0, 65523, 1, 0, 393228, 1, 0, 458764, 1, 0, 720886, 0, 0, 720885, 0, 0, 720892, 0, 0, 720893, 0, 0, 720895, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, -327676, 0, 0, 393196, 1, 0, 327692, 1, 0, -720916, 1, 0, -720915, 1, 0, -720914, 1, 0, -720913, 1, 0, -720912, 1, 0, -720911, 1, 0, -720910, 1, 0, -720909, 1, 0, -720908, 1, 0, -720907, 1, 0, -720906, 1, 0, -720905, 1, 0, -720904, 1, 0, -720903, 1, 0, -720902, 1, 0, -720901, 1, 0, -720900, 1, 0, -720899, 1, 0, -720898, 1, 0, -720897, 1, 0, -786432, 1, 0, -786431, 1, 0, -786430, 1, 0, -786429, 1, 0, -786428, 1, 0, -786427, 1, 0, -786426, 1, 0, -786425, 1, 0, -786424, 1, 0, -786423, 1, 0, -786422, 1, 0, -786421, 1, 0, -786420, 1, 0, -786419, 1, 0, -786418, 1, 0, -786417, 1, 0, -786416, 1, 0, -786415, 1, 0, -786414, 1, 0, -786413, 1, 0)

[node name="DoorRight1" parent="." instance=ExtResource("5_7mpmw")]
position = Vector2(160, -96)

[node name="DoorRight2" parent="." instance=ExtResource("5_7mpmw")]
position = Vector2(192, 144)

[node name="DoorLeft" parent="." instance=ExtResource("6_v6vkl")]
position = Vector2(-208, 32)

[node name="Button1" parent="." instance=ExtResource("7_dxyqv")]
position = Vector2(-144, 160)

[node name="Button2" parent="." instance=ExtResource("7_dxyqv")]
position = Vector2(-32, 160)

[node name="Button3" parent="." instance=ExtResource("7_dxyqv")]
position = Vector2(-232, 48)

[node name="Door1" parent="." instance=ExtResource("8_plo3l")]
position = Vector2(-280, 32)

[node name="Door2" parent="." instance=ExtResource("8_plo3l")]
position = Vector2(280, 144)

[node name="Back_pack" parent="." instance=ExtResource("9_xqdt5")]
position = Vector2(224, -77)

[node name="Player 2 - Level" parent="." instance=ExtResource("10_5l4u2")]
position = Vector2(-288, 144)

[connection signal="body_entered" from="Button1" to="." method="_on_button_1_body_entered"]
[connection signal="body_exited" from="Button1" to="." method="_on_button_1_body_exited"]
[connection signal="body_entered" from="Button2" to="." method="_on_button_2_body_entered"]
[connection signal="body_exited" from="Button2" to="." method="_on_button_2_body_exited"]
[connection signal="body_entered" from="Button3" to="." method="_on_button_3_body_entered"]
[connection signal="body_exited" from="Button3" to="." method="_on_button_3_body_exited"]
[connection signal="body_entered" from="Door1" to="." method="_on_door_1_body_entered"]
[connection signal="body_exited" from="Door1" to="." method="_on_door_1_body_exited"]
[connection signal="body_entered" from="Door2" to="." method="_on_door_2_body_entered"]
[connection signal="body_exited" from="Door2" to="." method="_on_door_2_body_exited"]
[connection signal="body_entered" from="Back_pack" to="." method="_on_back_pack_body_entered"]
